mobile-contact-button-fixing

--- a/index.html
+++ b/index.html
@@ -553,46 +553,40 @@
           <!-- h2 Contact -->
           <div class="custom_margintop container">
             <section id="contact" class="intersection hidden">
-              <div class="row">
-                <div class="col-3"></div>
-                <div class="col-md-3">
-                  <div class="card mb-2" style="max-width: 30vh">
-                    <div class="card-body">
-                      <h5 class="card-title">Send me an e-mail</h5>
-
-                      <button
-                        type="button"
-                        id="emailFooter"
-                        class="btn btn-primary popover__btn"
-                        data-bs-container="body"
-                        data-bs-toggle="popover"
-                        data-bs-placement="bottom"
-                        data-bs-content="Copied!">
-                        Copy adress
-                      </button>
-                    </div>
-                  </div>
+              <div
+                class="card mb-2 mobile_contact"
+                style="min-width: 30vh; max-width: 35vh">
+                <div class="card-body">
+                  <h5 class="card-title">Send me an e-mail</h5>
+                  <button
+                    type="button"
+                    id="emailFooter"
+                    class="btn btn-primary popover__btn"
+                    data-bs-container="body"
+                    data-bs-toggle="popover"
+                    data-bs-placement="bottom"
+                    data-bs-content="Copied!">
+                    Copy adress
+                  </button>
                 </div>
-                <div class="col-md-3">
-                  <div class="card mb-2" style="max-width: 30vh">
-                    <div class="card-body">
-                      <h5 class="card-title">My CV</h5>
-                      <a
-                        href="https://drive.google.com/file/d/1YyL8_wp4NXHmECWjv0aNm7jJufQEU18J/view?usp=share_link"
-                        type="button"
-                        id="phoneFooter"
-                        class="btn btn-primary popover__btn"
-                        data-bs-container="body"
-                        data-bs-toggle="popover"
-                        data-bs-placement="bottom"
-                        data-bs-content="Redirecting..">
-                        Download
-                      </a>
-                    </div>
-                  </div>
+              </div>
+              <div
+                class="card mb-2 mobile_contact"
+                style="min-width: 30vh; max-width: 35vh">
+                <div class="card-body">
+                  <h5 class="card-title">My CV</h5>
+                  <a
+                    href="https://drive.google.com/file/d/1YyL8_wp4NXHmECWjv0aNm7jJufQEU18J/view?usp=share_link"
+                    type="button"
+                    id="phoneFooter"
+                    class="btn btn-primary popover__btn"
+                    data-bs-container="body"
+                    data-bs-toggle="popover"
+                    data-bs-placement="bottom"
+                    data-bs-content="Redirecting..">
+                    Download
+                  </a>
                 </div>
-
-                <div class="col-sm-3"></div>
               </div>
             </section>
           </div>
