--- a/index.html
+++ b/index.html
@@ -553,39 +553,39 @@
           <!-- h2 Contact -->
           <div class="custom_margintop container">
             <section id="contact" class="intersection hidden">
-              <div
-                class="card mb-2 mobile_contact"
-                style="min-width: 30vh; max-width: 35vh">
-                <div class="card-body">
-                  <h5 class="card-title">Send me an e-mail</h5>
-                  <button
-                    type="button"
-                    id="emailFooter"
-                    class="btn btn-primary popover__btn"
-                    data-bs-container="body"
-                    data-bs-toggle="popover"
-                    data-bs-placement="bottom"
-                    data-bs-content="Copied!">
-                    Copy adress
-                  </button>
+              <div class="contact_buttons">
+                <div class="card m-2" style="min-width: 30vh; max-width: 35vh">
+                  <div class="card-body">
+                    <h5 class="card-title">Send me an e-mail</h5>
+                    <button
+                      type="button"
+                      id="emailFooter"
+                      class="btn btn-primary popover__btn"
+                      style="min-width: 70%"
+                      data-bs-container="body"
+                      data-bs-toggle="popover"
+                      data-bs-placement="bottom"
+                      data-bs-content="Copied!">
+                      Copy adress
+                    </button>
+                  </div>
                 </div>
-              </div>
-              <div
-                class="card mb-2 mobile_contact"
-                style="min-width: 30vh; max-width: 35vh">
-                <div class="card-body">
-                  <h5 class="card-title">My CV</h5>
-                  <a
-                    href="https://drive.google.com/file/d/1YyL8_wp4NXHmECWjv0aNm7jJufQEU18J/view?usp=share_link"
-                    type="button"
-                    id="phoneFooter"
-                    class="btn btn-primary popover__btn"
-                    data-bs-container="body"
-                    data-bs-toggle="popover"
-                    data-bs-placement="bottom"
-                    data-bs-content="Redirecting..">
-                    Download
-                  </a>
+                <div class="card m-2" style="min-width: 30vh; max-width: 35vh">
+                  <div class="card-body">
+                    <h5 class="card-title">My CV</h5>
+                    <a
+                      href="https://drive.google.com/file/d/1YyL8_wp4NXHmECWjv0aNm7jJufQEU18J/view?usp=share_link"
+                      type="button"
+                      id="phoneFooter"
+                      class="btn btn-primary popover__btn"
+                      style="min-width: 70%"
+                      data-bs-container="body"
+                      data-bs-toggle="popover"
+                      data-bs-placement="bottom"
+                      data-bs-content="Redirecting..">
+                      Link
+                    </a>
+                  </div>
                 </div>
               </div>
             </section>
