mobile-about-section-layout-fixing

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <div class="col-lg-3">
                       <img
                         src="img\general.png"
-                        class="img-fluid rounded-start p-4"
+                        class="img-fluid rounded-start about_images"
                         alt="general" />
                     </div>
                     <div class="col-lg-9">
@@ -124,7 +124,7 @@
                 <div class="card mb-5 border-dark" style="max-width: 800px">
                   <div class="row g-0">
                     <div class="col-lg-9">
-                      <div class="card-body text-right text-end">
+                      <div class="card-body">
                         <h5 class="card-title">Education</h5>
                         <p class="card-text">
                           As a fan of technology, I always wanted to learn and
@@ -142,7 +142,7 @@
                     <div class="col-lg-3">
                       <img
                         src="img\education.png"
-                        class="img-fluid rounded-end position-relative p-4"
+                        class="img-fluid rounded-end about_images"
                         alt="edu" />
                     </div>
                   </div>
@@ -157,7 +157,7 @@
                     <div class="col-lg-4">
                       <img
                         src="img\exp.png"
-                        class="img-fluid rounded-start p-4"
+                        class="img-fluid rounded-start about_images"
                         alt="exp" />
                     </div>
                     <div class="col-lg-8">
