refactoring-about-section

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <section id="about" class="section_padding">
               <!-- In General -->
               <div class="intersection hidden">
-                <div class="card mb-5 border-dark" style="max-width: 800px">
+                <div class="card mb-5 border-dark" style="max-width: 700px">
                   <div class="row g-0">
                     <div class="col-lg-3">
                       <img
@@ -108,11 +108,10 @@
                         <h5 class="card-title">In General</h5>
                         <p class="card-text">
                           I am a 24 year old, young, ambitious guy from Hungary.
-                          I grew up in a small town in the heart of Zemplén,
-                          Sárospatak, with my loving family. I went to school
-                          there and moved to Debrecen in 2018. For 4 years I
-                          attended to The University of Debrecen, after that I
-                          stayed in the city, and started my career here.
+                          I went to school and moved to Debrecen in 2018. For 4
+                          years I attended to The University of Debrecen, after
+                          that I stayed in the city, and started my career
+                          here...
                         </p>
                       </div>
                     </div>
@@ -120,22 +119,19 @@
                 </div>
               </div>
               <!-- Education -->
-              <div class="intersection hidden offset-lg-4">
-                <div class="card mb-5 border-dark" style="max-width: 800px">
+              <div class="intersection hidden d-flex justify-content-end">
+                <div class="card mb-5 border-dark" style="max-width: 700px">
                   <div class="row g-0">
                     <div class="col-lg-9">
                       <div class="card-body">
                         <h5 class="card-title">Education</h5>
                         <p class="card-text">
-                          As a fan of technology, I always wanted to learn and
-                          improve my knowledge in a lot of segments of the
-                          virtual world. In late high-school I decided to stick
-                          with the programming line, and I was admitted as a
-                          Business Informatics student. There was a lot of data
-                          science, data and statistics analyzing that I liked,
-                          and a lot of economic stuff that I did not. In
-                          paralell I got into web development, started learning
-                          the holy trinity (JS, HTML, CSS).
+                          ... As a fan of technology, I always wanted to learn
+                          and improve my knowledge in a lot of segments of the
+                          virtual world. I got into web development, started
+                          learning the holy trinity (JS, HTML, CSS) in late
+                          2021, and I got my Business Informatics degree in 2022
+                          June...
                         </p>
                       </div>
                     </div>
@@ -152,7 +148,7 @@
               <div class="intersection hidden">
                 <div
                   class="intersection hidden card border-dark"
-                  style="max-width: 700px">
+                  style="max-width: 600px">
                   <div class="row g-0">
                     <div class="col-lg-4">
                       <img
@@ -164,13 +160,11 @@
                       <div class="card-body">
                         <h5 class="card-title">Experience</h5>
                         <p class="card-text">
-                          I started working as a Trainee at a nice, small,
-                          family like company as a manual tester in February,
-                          2022. After I got my degree, I got hired as a Junior
-                          Sharepoint developer, and started working full-time in
-                          September, 2022. I learnt lots of various things about
-                          web-development, and worked with different technology
-                          types. I still work for this company now, as of
+                          I started working as a Trainee at small, in 2022
+                          February. After I got my degree, I got hired as a
+                          Junior Sharepoint Developer, and started working
+                          full-time in September, 2022. I still work for this
+                          company now, as of
                           <span id="today"></span>.
                         </p>
                       </div>
@@ -264,200 +258,6 @@
                           <p class="card-text m-auto">
                             Creating, supporting modern Sharepoint DMS sites to
                             the customers
-                          </p>
-                        </div>
-                      </div>
-                    </div>
-                    <!-- Card -->
-                    <div class="col-auto">
-                      <div
-                        class="card skill_card text-dark bg-light mb-4 very_rounded_edges">
-                        <div class="card-header bg-transparent h5">
-                          Power Platform
-                        </div>
-                        <div class="card-body d-flex">
-                          <p class="card-text m-auto">
-                            Creating canvas apps, customizing existing
-                            Sharepoint pages with Power Apps and Power Automate
-                          </p>
-                        </div>
-                      </div>
-                    </div>
-                    <!-- Card -->
-                    <div class="col-auto">
-                      <div
-                        class="card skill_card text-dark bg-light mb-4 very_rounded_edges">
-                        <div class="card-header bg-transparent h5">
-                          Working with API-s
-                        </div>
-                        <div class="card-body d-flex bg-transparent">
-                          <p class="card-text m-auto">
-                            Creating and managing AAD Applications, which are
-                            using MS Graph and Sharepoint API-s to automate
-                            various tasks
-                          </p>
-                        </div>
-                      </div>
-                    </div>
-
-                    <!-- Card -->
-                    <div class="col-auto">
-                      <div
-                        class="card skill_card text-dark bg-light mb-4 very_rounded_edges">
-                        <div class="card-header bg-transparent h5">SPFx</div>
-                        <div class="card-body d-flex">
-                          <p class="card-text m-auto">
-                            Adding custom webparts, extensions to Sharepoint
-                            using Typescript (such as buttons, welcome screens)
-                          </p>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <!-- School card deck -->
-                  <div class="row d-none card-deck-sortable skill__deck">
-                    <!-- Card -->
-                    <div class="col-auto">
-                      <div
-                        class="card skill_card text-dark bg-light mb-4 very_rounded_edges">
-                        <div class="card-header bg-transparent h5">Python</div>
-                        <div class="card-body d-flex">
-                          <p class="card-text m-auto">
-                            Algorithyms, OOP, Data Analyzing, Deeplearning
-                          </p>
-                        </div>
-                      </div>
-                    </div>
-                    <!-- Card -->
-                    <div class="col-auto">
-                      <div
-                        class="card skill_card text-dark bg-light mb-4 very_rounded_edges">
-                        <div class="card-header bg-transparent h5">SQL</div>
-                        <div class="card-body d-flex">
-                          <p class="card-text m-auto">
-                            Oracle, MS SQL data managing
-                          </p>
-                        </div>
-                      </div>
-                    </div>
-
-                    <!-- Card -->
-                    <div class="col-auto">
-                      <div
-                        class="card skill_card text-dark bg-light mb-4 very_rounded_edges">
-                        <div class="card-header bg-transparent h5">VBA</div>
-                        <div class="card-body d-flex">
-                          <p class="card-text m-auto">
-                            Creating small size full-stack desktop apps, data
-                            stored in excel
-                          </p>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <!-- Self-learnt card deck -->
-                  <div class="row d-none card-deck-sortable skill__deck">
-                    <!-- Card -->
-                    <div class="col-auto">
-                      <div
-                        class="card skill_card text-dark bg-light mb-4 very_rounded_edges">
-                        <div class="card-header bg-transparent h5">
-                          HTML, CSS
-                        </div>
-                        <div class="card-body d-flex">
-                          <p class="card-text m-auto">
-                            Creating static HTML webpages customized with CSS,
-                            or CSS with Bootstrap
-                          </p>
-                        </div>
-                      </div>
-                    </div>
-                    <!-- Card -->
-                    <div class="col-auto">
-                      <div
-                        class="card skill_card text-dark bg-light mb-4 very_rounded_edges">
-                        <div class="card-header bg-transparent h5">
-                          Javascript
-                        </div>
-                        <div class="card-body d-flex">
-                          <p class="card-text m-auto">
-                            FP, OOP, Asynchronous programming, using it for
-                            making bigger front-end webpages
-                          </p>
-                        </div>
-                      </div>
-                    </div>
-                    <!-- Card -->
-                    <div class="col-auto">
-                      <div
-                        class="card skill_card text-dark bg-light mb-4 very_rounded_edges">
-                        <div class="card-header bg-transparent h5">
-                          Version control
-                        </div>
-                        <div class="card-body d-flex">
-                          <p class="card-text m-auto">
-                            Git, Github for managing code
-                          </p>
-                        </div>
-                      </div>
-                    </div>
-                    <!-- Card -->
-                    <div class="col-auto">
-                      <div
-                        class="card skill_card text-dark bg-light mb-4 very_rounded_edges">
-                        <div class="card-header bg-transparent h5">
-                          Tools, libraries
-                        </div>
-                        <div class="card-body d-flex">
-                          <p class="card-text m-auto">
-                            Like NPM, Parcel, Leaflet, Web API-s, to make web
-                            developing cleaner and easier
-                          </p>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-
-                  <!-- Softskills card deck -->
-                  <div class="row d-none card-deck-sortable skill__deck">
-                    <!-- Card -->
-                    <div class="col-auto">
-                      <div
-                        class="card skill_card text-dark bg-light mb-4 very_rounded_edges">
-                        <div class="card-header bg-transparent h5">
-                          Team-player
-                        </div>
-                        <div class="card-body d-flex">
-                          <p class="card-text m-auto">
-                            A team is as good as working alone, change my mind
-                          </p>
-                        </div>
-                      </div>
-                    </div>
-                    <!-- Card -->
-                    <div class="col-auto">
-                      <div
-                        class="card skill_card text-dark bg-light mb-4 very_rounded_edges">
-                        <div class="card-header bg-transparent h5">
-                          Problem solver
-                        </div>
-                        <div class="card-body d-flex">
-                          <p class="card-text m-auto">
-                            It won't let me rest until I solve it
-                          </p>
-                        </div>
-                      </div>
-                    </div>
-                    <!-- Card -->
-                    <div class="col-auto">
-                      <div
-                        class="card skill_card text-dark bg-light mb-4 very_rounded_edges">
-                        <div class="card-header bg-transparent h5">
-                          Hard-worker
-                        </div>
-                        <div class="card-body d-flex">
-                          <p class="card-text m-auto">
-                            No unfinished projects, what started needs an end
                           </p>
                         </div>
                       </div>
