--- a/index.html
+++ b/index.html
@@ -160,11 +160,11 @@
                       <div class="card-body">
                         <h5 class="card-title">Experience</h5>
                         <p class="card-text">
-                          I started working as a Trainee at small, in 2022
-                          February. After I got my degree, I got hired as a
-                          Junior Sharepoint Developer, and started working
-                          full-time in September, 2022. I still work for this
-                          company now, as of
+                          ... I started working as a Trainee in 2022 February.
+                          After I got my degree, I got hired as a Junior
+                          Sharepoint Developer, and started working full-time in
+                          September, 2022. I still work for this company now, as
+                          of
                           <span id="today"></span>.
                         </p>
                       </div>
@@ -177,89 +177,105 @@
           <!-- h2 Skills -->
           <div class="custom_margintop container">
             <section id="skills" class="intersection hidden section_padding">
-              <div class="card text-center very_rounded_edges">
-                <!-- Tab navigation -->
-                <div class="card-header bg-transparent">
-                  <div class="row">
-                    <div class="col-sm-6">
-                      <ul
-                        class="nav nav-tabs card-header-tabs skill__tabs__container"
-                        style="max-width: 500px">
-                        <li class="nav-item">
-                          <a
-                            class="nav-link active skill__tab rounded_top_edges"
-                            href="#"
-                            data-tab="1"
-                            >work</a
-                          >
-                        </li>
-                        <li class="nav-item">
-                          <a
-                            class="nav-link skill__tab rounded_top_edges"
-                            href="#"
-                            data-tab="2"
-                            >school</a
-                          >
-                        </li>
-                        <li class="nav-item">
-                          <a
-                            class="nav-link skill__tab rounded_top_edges"
-                            href="#"
-                            data-tab="3"
-                            >self-learnt</a
-                          >
-                        </li>
-                        <li class="nav-item">
-                          <a
-                            class="nav-link skill__tab rounded_top_edges"
-                            href="#"
-                            data-tab="4"
-                            >soft</a
-                          >
-                        </li>
-                      </ul>
-                    </div>
-                    <!-- <div class="col-sm-6 m-auto">
-                      <div class="progress text-center">
-                        <div
-                          class="progress-bar"
-                          role="progressbar"
-                          style="
-                            width: 75%;
-                            background-image: linear-gradient(
-                              to right,
-                              #386de0,
-                              rgb(33, 87, 206)
-                            );
-                          "
-                          aria-valuenow="25"
-                          aria-valuemin="0"
-                          aria-valuemax="100">
-                          Higher is better
+              <div class="container">
+                <div class="row row-cols-lg-4 row-cols-md-3 row-cols-2 g-4">
+                  <div class="col">
+                    <div class="card">
+                      <div class="card-body">
+                        <div class="d-flex align-items-center">
+                          <i class="fab fa-html5 fa-2x mr-3"></i>
+                          <h5 class="card-title mb-0">HTML</h5>
                         </div>
+                        <div class="progress my-3">
+                          <div
+                            class="progress-bar"
+                            role="progressbar"
+                            style="width: 90%"
+                            aria-valuenow="90"
+                            aria-valuemin="0"
+                            aria-valuemax="100">
+                            90%
+                          </div>
+                        </div>
+                        <p class="card-text">
+                          Lorem ipsum dolor sit amet, consectetur adipiscing
+                          elit.
+                        </p>
                       </div>
-                    </div> -->
+                    </div>
                   </div>
-                </div>
-                <!-- Card body -->
-                <div
-                  class="card-body justify-content-center d-flex skill__deck__container">
-                  <!-- Work card deck -->
-                  <div class="row card-deck-sortable skill__deck">
-                    <!-- Card -->
-                    <div class="col-auto">
-                      <div
-                        class="card skill_card text-dark bg-light mb-4 very_rounded_edges">
-                        <div class="card-header bg-transparent h5">
-                          Sharepoint
+                  <div class="col">
+                    <div class="card">
+                      <div class="card-body">
+                        <div class="d-flex align-items-center">
+                          <i class="fab fa-css3-alt fa-2x mr-3"></i>
+                          <h5 class="card-title mb-0">CSS</h5>
                         </div>
-
-                        <div class="card-body d-flex">
-                          <p class="card-text m-auto">
-                            Creating, supporting modern Sharepoint DMS sites to
-                            the customers
-                          </p>
+                        <div class="progress my-3">
+                          <div
+                            class="progress-bar"
+                            role="progressbar"
+                            style="width: 80%"
+                            aria-valuenow="80"
+                            aria-valuemin="0"
+                            aria-valuemax="100">
+                            80%
+                          </div>
                         </div>
+                        <p class="card-text">
+                          Lorem ipsum dolor sit amet, consectetur adipiscing
+                          elit.
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="card">
+                      <div class="card-body">
+                        <div class="d-flex align-items-center">
+                          <i class="fab fa-js fa-2x mr-3"></i>
+                          <h5 class="card-title mb-0">JavaScript</h5>
+                        </div>
+                        <div class="progress my-3">
+                          <div
+                            class="progress-bar"
+                            role="progressbar"
+                            style="width: 70%"
+                            aria-valuenow="70"
+                            aria-valuemin="0"
+                            aria-valuemax="100">
+                            70%
+                          </div>
+                        </div>
+                        <p class="card-text">
+                          Lorem ipsum dolor sit amet, consectetur adipiscing
+                          elit.
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="card">
+                      <div class="card-body">
+                        <div class="d-flex align-items-center">
+                          <i class="fab fa-bootstrap fa-2x mr-3"></i>
+                          <h5 class="card-title mb-0">Bootstrap</h5>
+                        </div>
+                        <div class="progress my-3">
+                          <div
+                            class="progress-bar"
+                            role="progressbar"
+                            style="width: 85%"
+                            aria-valuenow="85"
+                            aria-valuemin="0"
+                            aria-valuemax="100">
+                            85%
+                          </div>
+                        </div>
+                        <p class="card-text">
+                          Lorem ipsum dolor sit amet, consectetur adipiscing
+                          elit.
+                        </p>
                       </div>
                     </div>
                   </div>
