--- a/index.html
+++ b/index.html
@@ -208,6 +208,31 @@
                     <div class="card">
                       <div class="card-body">
                         <div class="d-flex align-items-center">
+                          <i class="fab fa-html5 fa-2x mr-3"></i>
+                          <h5 class="card-title mb-0">HTML</h5>
+                        </div>
+                        <div class="progress my-3">
+                          <div
+                            class="progress-bar"
+                            role="progressbar"
+                            style="width: 90%"
+                            aria-valuenow="90"
+                            aria-valuemin="0"
+                            aria-valuemax="100">
+                            90%
+                          </div>
+                        </div>
+                        <p class="card-text">
+                          Lorem ipsum dolor sit amet, consectetur adipiscing
+                          elit.
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="card">
+                      <div class="card-body">
+                        <div class="d-flex align-items-center">
                           <i class="fab fa-css3-alt fa-2x mr-3"></i>
                           <h5 class="card-title mb-0">CSS</h5>
                         </div>
