--- a/index.html
+++ b/index.html
@@ -179,112 +179,13 @@
             <section id="skills" class="intersection hidden section_padding">
               <div class="container">
                 <div class="row row-cols-lg-4 row-cols-md-3 row-cols-2 g-4">
+                  <!-- JS -->
                   <div class="col">
                     <div class="card">
                       <div class="card-body">
                         <div class="d-flex align-items-center">
-                          <i class="fab fa-html5 fa-2x mr-3"></i>
-                          <h5 class="card-title mb-0">HTML</h5>
-                        </div>
-                        <div class="progress my-3">
-                          <div
-                            class="progress-bar"
-                            role="progressbar"
-                            style="width: 90%"
-                            aria-valuenow="90"
-                            aria-valuemin="0"
-                            aria-valuemax="100">
-                            90%
-                          </div>
-                        </div>
-                        <p class="card-text">
-                          Lorem ipsum dolor sit amet, consectetur adipiscing
-                          elit.
-                        </p>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col">
-                    <div class="card">
-                      <div class="card-body">
-                        <div class="d-flex align-items-center">
-                          <i class="fab fa-html5 fa-2x mr-3"></i>
-                          <h5 class="card-title mb-0">HTML</h5>
-                        </div>
-                        <div class="progress my-3">
-                          <div
-                            class="progress-bar"
-                            role="progressbar"
-                            style="width: 90%"
-                            aria-valuenow="90"
-                            aria-valuemin="0"
-                            aria-valuemax="100">
-                            90%
-                          </div>
-                        </div>
-                        <p class="card-text">
-                          Lorem ipsum dolor sit amet, consectetur adipiscing
-                          elit.
-                        </p>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col">
-                    <div class="card">
-                      <div class="card-body">
-                        <div class="d-flex align-items-center">
-                          <i class="fab fa-css3-alt fa-2x mr-3"></i>
-                          <h5 class="card-title mb-0">CSS</h5>
-                        </div>
-                        <div class="progress my-3">
-                          <div
-                            class="progress-bar"
-                            role="progressbar"
-                            style="width: 80%"
-                            aria-valuenow="80"
-                            aria-valuemin="0"
-                            aria-valuemax="100">
-                            80%
-                          </div>
-                        </div>
-                        <p class="card-text">
-                          Lorem ipsum dolor sit amet, consectetur adipiscing
-                          elit.
-                        </p>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col">
-                    <div class="card">
-                      <div class="card-body">
-                        <div class="d-flex align-items-center">
-                          <i class="fab fa-js fa-2x mr-3"></i>
+                          <img src="img\js.png" class="skill_img" alt="" />
                           <h5 class="card-title mb-0">JavaScript</h5>
-                        </div>
-                        <div class="progress my-3">
-                          <div
-                            class="progress-bar"
-                            role="progressbar"
-                            style="width: 70%"
-                            aria-valuenow="70"
-                            aria-valuemin="0"
-                            aria-valuemax="100">
-                            70%
-                          </div>
-                        </div>
-                        <p class="card-text">
-                          Lorem ipsum dolor sit amet, consectetur adipiscing
-                          elit.
-                        </p>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col">
-                    <div class="card">
-                      <div class="card-body">
-                        <div class="d-flex align-items-center">
-                          <i class="fab fa-bootstrap fa-2x mr-3"></i>
-                          <h5 class="card-title mb-0">Bootstrap</h5>
                         </div>
                         <div class="progress my-3">
                           <div
@@ -293,9 +194,272 @@
                             style="width: 85%"
                             aria-valuenow="85"
                             aria-valuemin="0"
-                            aria-valuemax="100">
-                            85%
-                          </div>
+                            aria-valuemax="100"></div>
+                        </div>
+                        <p class="card-text">
+                          Lorem ipsum dolor sit amet, consectetur adipiscing
+                          elit.
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- Python -->
+                  <div class="col">
+                    <div class="card">
+                      <div class="card-body">
+                        <div class="d-flex align-items-center">
+                          <img src="img\python.png" class="skill_img" alt="" />
+                          <h5 class="card-title mb-0">Python</h5>
+                        </div>
+                        <div class="progress my-3">
+                          <div
+                            class="progress-bar"
+                            role="progressbar"
+                            style="width: 85%"
+                            aria-valuenow="85"
+                            aria-valuemin="0"
+                            aria-valuemax="100"></div>
+                        </div>
+                        <p class="card-text">
+                          Lorem ipsum dolor sit amet, consectetur adipiscing
+                          elit.
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- HTML -->
+                  <div class="col">
+                    <div class="card">
+                      <div class="card-body">
+                        <div class="d-flex align-items-center">
+                          <img src="img\html.png" class="skill_img" alt="" />
+                          <h5 class="card-title mb-0">HTML</h5>
+                        </div>
+                        <div class="progress my-3">
+                          <div
+                            class="progress-bar"
+                            role="progressbar"
+                            style="width: 80%"
+                            aria-valuenow="80"
+                            aria-valuemin="0"
+                            aria-valuemax="100"></div>
+                        </div>
+                        <p class="card-text">
+                          Lorem ipsum dolor sit amet, consectetur adipiscing
+                          elit.
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- CSS -->
+                  <div class="col">
+                    <div class="card">
+                      <div class="card-body">
+                        <div class="d-flex align-items-center">
+                          <img src="img\css.png" class="skill_img" alt="" />
+                          <h5 class="card-title mb-0">CSS</h5>
+                        </div>
+                        <div class="progress my-3">
+                          <div
+                            class="progress-bar"
+                            role="progressbar"
+                            style="width: 70%"
+                            aria-valuenow="70"
+                            aria-valuemin="0"
+                            aria-valuemax="100"></div>
+                        </div>
+                        <p class="card-text">
+                          Lorem ipsum dolor sit amet, consectetur adipiscing
+                          elit.
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- .NET -->
+                  <div class="col">
+                    <div class="card">
+                      <div class="card-body">
+                        <div class="d-flex align-items-center">
+                          <img
+                            src="img\bootstrap.png"
+                            class="skill_img"
+                            alt="" />
+                          <h5 class="card-title mb-0">Bootstrap</h5>
+                        </div>
+                        <div class="progress my-3">
+                          <div
+                            class="progress-bar"
+                            role="progressbar"
+                            style="width: 70%"
+                            aria-valuenow="70"
+                            aria-valuemin="0"
+                            aria-valuemax="100"></div>
+                        </div>
+                        <p class="card-text">
+                          Lorem ipsum dolor sit amet, consectetur adipiscing
+                          elit.
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- Bootstrap -->
+                  <div class="col">
+                    <div class="card">
+                      <div class="card-body">
+                        <div class="d-flex align-items-center">
+                          <img src="img\c-sharp.png" class="skill_img" alt="" />
+                          <h5 class="card-title mb-0">.NET</h5>
+                        </div>
+                        <div class="progress my-3">
+                          <div
+                            class="progress-bar"
+                            role="progressbar"
+                            style="width: 60%"
+                            aria-valuenow="60"
+                            aria-valuemin="0"
+                            aria-valuemax="100"></div>
+                        </div>
+                        <p class="card-text">
+                          Lorem ipsum dolor sit amet, consectetur adipiscing
+                          elit.
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- SQL -->
+                  <div class="col">
+                    <div class="card">
+                      <div class="card-body">
+                        <div class="d-flex align-items-center">
+                          <img src="img\sql.png" class="skill_img" alt="" />
+                          <h5 class="card-title mb-0">SQL</h5>
+                        </div>
+                        <div class="progress my-3">
+                          <div
+                            class="progress-bar"
+                            role="progressbar"
+                            style="width: 60%"
+                            aria-valuenow="60"
+                            aria-valuemin="0"
+                            aria-valuemax="100"></div>
+                        </div>
+                        <p class="card-text">
+                          Lorem ipsum dolor sit amet, consectetur adipiscing
+                          elit.
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="card">
+                      <div class="card-body">
+                        <div class="d-flex align-items-center">
+                          <img src="img\library.png" class="skill_img" alt="" />
+                          <h5 class="card-title mb-0">Libraries</h5>
+                        </div>
+                        <div class="progress my-3">
+                          <div
+                            class="progress-bar"
+                            role="progressbar"
+                            style="width: 65%"
+                            aria-valuenow="65"
+                            aria-valuemin="0"
+                            aria-valuemax="100"></div>
+                        </div>
+                        <p class="card-text">
+                          Lorem ipsum dolor sit amet, consectetur adipiscing
+                          elit.
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="card">
+                      <div class="card-body">
+                        <div class="d-flex align-items-center">
+                          <img src="img\papps.svg" class="skill_img" alt="" />
+                          <h5 class="card-title mb-0">Power Apps</h5>
+                        </div>
+                        <div class="progress my-3">
+                          <div
+                            class="progress-bar"
+                            role="progressbar"
+                            style="width: 60%"
+                            aria-valuenow="60"
+                            aria-valuemin="0"
+                            aria-valuemax="100"></div>
+                        </div>
+                        <p class="card-text">
+                          Lorem ipsum dolor sit amet, consectetur adipiscing
+                          elit.
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="card">
+                      <div class="card-body">
+                        <div class="d-flex align-items-center">
+                          <img
+                            src="img\pautomate.svg"
+                            class="skill_img"
+                            alt="" />
+                          <h5 class="card-title mb-0">Power Automate</h5>
+                        </div>
+                        <div class="progress my-3">
+                          <div
+                            class="progress-bar"
+                            role="progressbar"
+                            style="width: 60%"
+                            aria-valuenow="60"
+                            aria-valuemin="0"
+                            aria-valuemax="100"></div>
+                        </div>
+                        <p class="card-text">
+                          Lorem ipsum dolor sit amet, consectetur adipiscing
+                          elit.
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="card">
+                      <div class="card-body">
+                        <div class="d-flex align-items-center">
+                          <img src="img\api.png" class="skill_img" alt="" />
+                          <h5 class="card-title mb-0">REST API-s</h5>
+                        </div>
+                        <div class="progress my-3">
+                          <div
+                            class="progress-bar"
+                            role="progressbar"
+                            style="width: 60%"
+                            aria-valuenow="60"
+                            aria-valuemin="0"
+                            aria-valuemax="100"></div>
+                        </div>
+                        <p class="card-text">
+                          Lorem ipsum dolor sit amet, consectetur adipiscing
+                          elit.
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="card">
+                      <div class="card-body">
+                        <div class="d-flex align-items-center">
+                          <img src="img\git.png" class="skill_img" alt="" />
+                          <h5 class="card-title mb-0">Git</h5>
+                        </div>
+                        <div class="progress my-3">
+                          <div
+                            class="progress-bar"
+                            role="progressbar"
+                            style="width: 55%"
+                            aria-valuenow="55"
+                            aria-valuemin="0"
+                            aria-valuemax="100"></div>
                         </div>
                         <p class="card-text">
                           Lorem ipsum dolor sit amet, consectetur adipiscing
