noticed-some-bug-at-footer-icons-fixed

--- a/index.html
+++ b/index.html
@@ -108,10 +108,9 @@
                         <h5 class="card-title">In General</h5>
                         <p class="card-text">
                           I am a 24 year old, young, ambitious guy from Hungary.
-                          I went to school and moved to Debrecen in 2018. For 4
-                          years I attended to The University of Debrecen, after
-                          that I stayed in the city, and started my career
-                          here...
+                          In 2018, I moved from the countryside and attended to
+                          The University of Debrecen for 4 years. After that I
+                          stayed in the city, and started my career here...
                         </p>
                       </div>
                     </div>
@@ -605,13 +604,16 @@
           © 2023 by Máté Rák
           <div class="float-end">
             <span style="margin-right: 15px">
-              <a href="https://github.com/rakmate9812">
+              <a
+                href="https://github.com/rakmate9812"
+                style="text-decoration: none">
                 <i class="fa-brands fa-github-alt fa-lg footer_icons"></i>
               </a>
             </span>
             <span>
               <a
-                href="https://www.linkedin.com/in/m%C3%A1t%C3%A9-r%C3%A1k-1210ab22b/">
+                href="https://www.linkedin.com/in/m%C3%A1t%C3%A9-r%C3%A1k-1210ab22b/"
+                style="text-decoration: none">
                 <i class="fa-brands fa-linkedin-in fa-lg footer_icons"></i>
               </a>
             </span>
