skill-content-updating

--- a/index.html
+++ b/index.html
@@ -177,10 +177,11 @@
           <div class="custom_margintop container">
             <section id="skills" class="intersection hidden section_padding">
               <div class="container">
-                <div class="row row-cols-lg-4 row-cols-md-3 row-cols-2 g-4">
+                <div
+                  class="row row-cols-lg-4 row-cols-md-3 row-cols-2 g-4 text-center">
                   <!-- JS -->
                   <div class="col">
-                    <div class="card">
+                    <div class="card" style="height: 10rem">
                       <div class="card-body">
                         <div class="d-flex align-items-center">
                           <img src="img\js.png" class="skill_img" alt="" />
@@ -196,15 +197,14 @@
                             aria-valuemax="100"></div>
                         </div>
                         <p class="card-text">
-                          Lorem ipsum dolor sit amet, consectetur adipiscing
-                          elit.
+                          Comes from Udemy and Youtube, my Main skill
                         </p>
                       </div>
                     </div>
                   </div>
                   <!-- Python -->
                   <div class="col">
-                    <div class="card">
+                    <div class="card" style="height: 10rem">
                       <div class="card-body">
                         <div class="d-flex align-items-center">
                           <img src="img\python.png" class="skill_img" alt="" />
@@ -220,15 +220,14 @@
                             aria-valuemax="100"></div>
                         </div>
                         <p class="card-text">
-                          Lorem ipsum dolor sit amet, consectetur adipiscing
-                          elit.
+                          Got into it in 2018, still loving & learning it
                         </p>
                       </div>
                     </div>
                   </div>
                   <!-- HTML -->
                   <div class="col">
-                    <div class="card">
+                    <div class="card" style="height: 10rem">
                       <div class="card-body">
                         <div class="d-flex align-items-center">
                           <img src="img\html.png" class="skill_img" alt="" />
@@ -243,16 +242,13 @@
                             aria-valuemin="0"
                             aria-valuemax="100"></div>
                         </div>
-                        <p class="card-text">
-                          Lorem ipsum dolor sit amet, consectetur adipiscing
-                          elit.
-                        </p>
+                        <p class="card-text">JS's best friend</p>
                       </div>
                     </div>
                   </div>
                   <!-- CSS -->
                   <div class="col">
-                    <div class="card">
+                    <div class="card" style="height: 10rem">
                       <div class="card-body">
                         <div class="d-flex align-items-center">
                           <img src="img\css.png" class="skill_img" alt="" />
@@ -267,16 +263,13 @@
                             aria-valuemin="0"
                             aria-valuemax="100"></div>
                         </div>
-                        <p class="card-text">
-                          Lorem ipsum dolor sit amet, consectetur adipiscing
-                          elit.
-                        </p>
+                        <p class="card-text">JS's second best friend</p>
                       </div>
                     </div>
                   </div>
                   <!-- .NET -->
                   <div class="col">
-                    <div class="card">
+                    <div class="card" style="height: 10rem">
                       <div class="card-body">
                         <div class="d-flex align-items-center">
                           <img
@@ -294,16 +287,13 @@
                             aria-valuemin="0"
                             aria-valuemax="100"></div>
                         </div>
-                        <p class="card-text">
-                          Lorem ipsum dolor sit amet, consectetur adipiscing
-                          elit.
-                        </p>
+                        <p class="card-text">Learning along with CSS</p>
                       </div>
                     </div>
                   </div>
                   <!-- Bootstrap -->
                   <div class="col">
-                    <div class="card">
+                    <div class="card" style="height: 10rem">
                       <div class="card-body">
                         <div class="d-flex align-items-center">
                           <img src="img\c-sharp.png" class="skill_img" alt="" />
@@ -319,15 +309,14 @@
                             aria-valuemax="100"></div>
                         </div>
                         <p class="card-text">
-                          Lorem ipsum dolor sit amet, consectetur adipiscing
-                          elit.
+                          Currently working a lot with it, learning along
                         </p>
                       </div>
                     </div>
                   </div>
                   <!-- SQL -->
                   <div class="col">
-                    <div class="card">
+                    <div class="card" style="height: 10rem">
                       <div class="card-body">
                         <div class="d-flex align-items-center">
                           <img src="img\sql.png" class="skill_img" alt="" />
@@ -342,15 +331,13 @@
                             aria-valuemin="0"
                             aria-valuemax="100"></div>
                         </div>
-                        <p class="card-text">
-                          Lorem ipsum dolor sit amet, consectetur adipiscing
-                          elit.
-                        </p>
+                        <p class="card-text">Learned a lot in the University</p>
                       </div>
                     </div>
                   </div>
+                  <!-- Libraries -->
                   <div class="col">
-                    <div class="card">
+                    <div class="card" style="height: 10rem">
                       <div class="card-body">
                         <div class="d-flex align-items-center">
                           <img src="img\library.png" class="skill_img" alt="" />
@@ -366,14 +353,14 @@
                             aria-valuemax="100"></div>
                         </div>
                         <p class="card-text">
-                          Lorem ipsum dolor sit amet, consectetur adipiscing
-                          elit.
+                          Using many kinds of them a lot in JS, Python, .NET
                         </p>
                       </div>
                     </div>
                   </div>
+                  <!-- Power Apps -->
                   <div class="col">
-                    <div class="card">
+                    <div class="card" style="height: 10rem">
                       <div class="card-body">
                         <div class="d-flex align-items-center">
                           <img src="img\papps.svg" class="skill_img" alt="" />
@@ -389,14 +376,14 @@
                             aria-valuemax="100"></div>
                         </div>
                         <p class="card-text">
-                          Lorem ipsum dolor sit amet, consectetur adipiscing
-                          elit.
+                          For making custom SharePoint pages at work
                         </p>
                       </div>
                     </div>
                   </div>
+                  <!-- Power Autmate -->
                   <div class="col">
-                    <div class="card">
+                    <div class="card" style="height: 10rem">
                       <div class="card-body">
                         <div class="d-flex align-items-center">
                           <img
@@ -415,14 +402,14 @@
                             aria-valuemax="100"></div>
                         </div>
                         <p class="card-text">
-                          Lorem ipsum dolor sit amet, consectetur adipiscing
-                          elit.
+                          Automating stuff, mainly work related
                         </p>
                       </div>
                     </div>
                   </div>
+                  <!-- Rest Api-s -->
                   <div class="col">
-                    <div class="card">
+                    <div class="card" style="height: 10rem">
                       <div class="card-body">
                         <div class="d-flex align-items-center">
                           <img src="img\api.png" class="skill_img" alt="" />
@@ -438,14 +425,14 @@
                             aria-valuemax="100"></div>
                         </div>
                         <p class="card-text">
-                          Lorem ipsum dolor sit amet, consectetur adipiscing
-                          elit.
+                          MS API-s, implementing them in .NET apps
                         </p>
                       </div>
                     </div>
                   </div>
+                  <!-- Git -->
                   <div class="col">
-                    <div class="card">
+                    <div class="card" style="height: 10rem">
                       <div class="card-body">
                         <div class="d-flex align-items-center">
                           <img src="img\git.png" class="skill_img" alt="" />
@@ -461,8 +448,7 @@
                             aria-valuemax="100"></div>
                         </div>
                         <p class="card-text">
-                          Lorem ipsum dolor sit amet, consectetur adipiscing
-                          elit.
+                          Just for basic project management
                         </p>
                       </div>
                     </div>
