--- a/index.html
+++ b/index.html
@@ -31,11 +31,12 @@
     <!-- Navbar -->
     <nav class="navbar sticky-top navbar-expand-sm navbar-dark bg_nav_foot">
       <div class="container">
-        <a
-          href=""
-          class="navbar-brand mb-0 h1 fst-italic p-2 bg-success rounded_edges">
-          {logo} my Portfolio</a
-        >
+        <a href="" class="navbar-brand rounded_edges mr-3">
+          <img
+            src="img/logo.png"
+            alt=""
+            style="width: 5rem; margin: 0px 15px 0px 15px" />
+        </a>
         <button
           type="button"
           data-bs-toggle="collapse"
@@ -345,7 +346,7 @@
                               aria-valuemax="100"></div>
                           </div>
                           <p class="card-text">
-                            Currently working with it, learning along
+                            Currently doing lots of .NET projects at work
                           </p>
                         </div>
                       </div>
@@ -544,8 +545,8 @@
                   <div
                     id="carouselExampleCaptions"
                     class="carousel carousel-dark slide"
-                    data-bs-ride="carousel"
-                    style="max-width: 1000px">
+                    data-bs-interval="false"
+                    style="max-width: 1100px">
                     <div class="carousel-indicators">
                       <button
                         type="button"
