--- a/index.html
+++ b/index.html
@@ -5,23 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Me myself and I</title>
-    <!-- Links via CDN, I don't feel like dealing with npm in a small project like this -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
-      crossorigin="anonymous" />
+    <link rel="stylesheet" href="main.scss" />
     <link rel="stylesheet" href="style.css" />
-    <script defer src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script
       defer
-      src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
-    <script
-      defer
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-      crossorigin="anonymous"></script>
-    <script defer src="script.js"></script>
+      src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script defer type="module" src="script.js"></script>
     <script
       defer
       src="https://kit.fontawesome.com/ea067a8456.js"
@@ -471,13 +460,13 @@
                       </div>
                     </div>
                   </div>
-                  <!-- Rest Api-s -->
+                  <!-- Rest Api -->
                   <div class="col">
                     <div class="card">
                       <div class="card-body text__toggler">
                         <div class="d-flex align-items-center">
                           <img src="img\api.png" class="skill_img" alt="" />
-                          <h5 class="card-title mb-0">REST API-s</h5>
+                          <h5 class="card-title mb-0">REST API</h5>
                           <img
                             class="skill__info"
                             src="img/info.png"
@@ -622,7 +611,7 @@
           <div class="custom_margintop container">
             <section id="contact" class="intersection hidden">
               <div class="contact_buttons">
-                <div class="card m-2" style="min-width: 30vh; max-width: 35vh">
+                <div class="card m-2 contact_button">
                   <div class="card-body">
                     <h5 class="card-title">Send me an e-mail</h5>
                     <button
@@ -638,7 +627,7 @@
                     </button>
                   </div>
                 </div>
-                <div class="card m-2" style="min-width: 30vh; max-width: 35vh">
+                <div class="card m-2 contact_button">
                   <div class="card-body">
                     <h5 class="card-title">My CV</h5>
                     <a
