fixing-jquery-bootstrap-conflict

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <title>Me myself and I</title>
     <link rel="stylesheet" href="main.scss" />
     <link rel="stylesheet" href="style.css" />
+    <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script type="module" src="script.js"></script>
     <script
       type="module"
       src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script
-      defer
       src="https://kit.fontawesome.com/ea067a8456.js"
       crossorigin="anonymous"></script>
   </head>
@@ -621,7 +621,7 @@
                 <div class="float-end">
                   <span style="margin-right: 15px">
                     <a href="email" style="text-decoration: none">
-                      <i class="fa-regular fa-envelope fa-xl footer_icons"></i>
+                      <i class="fa-regular fa-envelope fa-lg footer_icons"></i>
                     </a>
                   </span>
                   <span style="margin-right: 15px">
@@ -629,14 +629,14 @@
                       href="https://drive.google.com/file/d/1YyL8_wp4NXHmECWjv0aNm7jJufQEU18J/view?usp=sharing"
                       style="text-decoration: none">
                       <i
-                        class="fa-regular fa-file-lines fa-xl footer_icons"></i>
+                        class="fa-regular fa-file-lines fa-lg footer_icons"></i>
                     </a>
                   </span>
                   <span style="margin-right: 15px">
                     <a
                       href="https://github.com/rakmate9812"
                       style="text-decoration: none">
-                      <i class="fa-brands fa-github-alt fa-xl footer_icons"></i>
+                      <i class="fa-brands fa-github-alt fa-lg footer_icons"></i>
                     </a>
                   </span>
                   <span>
@@ -644,7 +644,7 @@
                       href="https://www.linkedin.com/in/m%C3%A1t%C3%A9-r%C3%A1k-1210ab22b/"
                       style="text-decoration: none">
                       <i
-                        class="fa-brands fa-linkedin-in fa-xl footer_icons"></i>
+                        class="fa-brands fa-linkedin-in fa-lg footer_icons"></i>
                     </a>
                   </span>
                 </div>
